# agrep

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  agrep.cmd  cli.py  hatch_build.py  pyproject.toml  reindex.py  requirements.txt  synth_index.py  tilt  tilt.cmd  tilt.py  up.py
.cargo/: config.toml
.github/workflows/: release.yml
agrep/: __init__.py  __main__.py
agtilt/: __init__.py  __main__.py
crates/agrep-cli/: Cargo.toml
crates/agrep-cli/src/: main.rs
crates/agrep-core/: Cargo.toml
crates/agrep-core/src/: cache.rs  ingest_cache.rs  lib.rs  model.rs
crates/agrep-core/src/ingest/: antigravity.rs  claude.rs  cline.rs  codex.rs  kimi.rs  mod.rs  opencode.rs
crates/tilt-cli/: Cargo.toml
crates/tilt-cli/src/: main.rs
crates/tilt-core/: Cargo.toml
crates/tilt-core/src/: cache.rs  index.rs  ingest_cache.rs  lexicon.rs  lib.rs  model.rs  scan.rs  score.rs  search.rs  simd.rs
crates/tilt-core/src/ingest/: antigravity.rs  claude.rs  codex.rs  mod.rs  opencode.rs
npm/: README.md  bin.js  package.json  postinstall.js
py/: README.md  around.py  ask.py  common.py  concepts.py  corpusdb.py  doctor.py  embed.py  embed_query.py  embed_summaries.py  emotion.py  explore.py  indexd.py  indexer.py  judge.py  label_concepts.py  live.py  native.py  rawfetch.py  report.py  resume.py  search.py  server.py  setupjobs.py  summarize.py  tail.py  titles.py  vibe.py
web/: app.html  report.template.html
