[workspace]
members = ["crates/tilt-core", "crates/tilt-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
aho-corasick = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
bytemuck = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
