[workspace]
members = ["crates/tilt-core", "crates/tilt-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"          # whole-program inlining across crates (ingest is the hot path)
codegen-units = 1    # one unit -> best optimization, slower build (we build rarely)
panic = "abort"      # no unwind tables: smaller + slightly faster (this is a batch CLI)
strip = true         # drop debug symbols from the release binary
