[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agrep"
dynamic = ["version"]
description = "Search, browse, and watch your cross-agent coding chat history (Claude, Codex, opencode, Antigravity) in one place."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["claude", "codex", "opencode", "agent", "chat", "history", "semantic-search", "cli"]
authors = [{ name = "Danny" }]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
# Deliberately ZERO install deps: the core tier (browse, keyword search, live view,
# resume) runs on the stdlib + the bundled rust binary. The smart tier (torch etc.)
# and named tier (ollama) install on demand from inside the app's setup panel, which
# is the only sane way to ship a ~2.5GB GPU stack.
dependencies = []

[project.urls]
Homepage = "https://github.com/dannyisbad/tilt"
Repository = "https://github.com/dannyisbad/tilt"

[project.scripts]
agrep = "agrep.__main__:main"

[tool.hatch.version]
path = "agrep/__init__.py"

# --- wheel contents -----------------------------------------------------------
# The repo is a flat tree (tilt.py, reindex.py, py/, web/) plus a cargo target.
# force-include maps those into the agrep/ package dir at build time WITHOUT moving
# them in the repo, so dev keeps working unchanged. _bin/agrep-rs is dropped in by CI
# (or a local build) before packaging; it's gitignored.
[tool.hatch.build.targets.wheel]
packages = ["agrep"]
artifacts = ["agrep/_bin/*", "_bin/*"]

[tool.hatch.build.targets.wheel.force-include]
"tilt.py" = "agrep/tilt.py"
"reindex.py" = "agrep/reindex.py"
"requirements.txt" = "agrep/requirements.txt"
"py" = "agrep/py"
"web" = "agrep/web"
"_bin" = "agrep/_bin"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# sdist carries the rust source too, so `pip install` from source can cargo-build.
[tool.hatch.build.targets.sdist]
include = [
    "agrep/", "tilt.py", "reindex.py", "requirements.txt",
    "py/", "web/", "crates/", "Cargo.toml", "Cargo.lock",
    "hatch_build.py", "README.md", "LICENSE",
]
