[package]
name = "agrep-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

# The ingest engine. `agrep index` (tilt.py) shells out to this `agrep-rs` binary.
[[bin]]
name = "agrep-rs"
path = "src/main.rs"

[dependencies]
agrep-core = { path = "../agrep-core" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
