[package]
name = "tilt"
version.workspace = true
edition.workspace = true
license.workspace = true

# The ingest engine. Named distinctly from the `tilt` CLI (tilt.py) that drives it:
# users run `tilt index`, which shells out to this `tilt-rs` binary.
[[bin]]
name = "tilt-rs"
path = "src/main.rs"

[dependencies]
tilt-core = { path = "../tilt-core" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
